@@ -2,7 +2,6 @@ package com.enonic.xp.vfs;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.regex.Pattern;
@@ -111,7 +110,7 @@ class VirtualFilePathImpl
     @Override
     public String getName()
     {
-        return this.elements.get(this.elements.size() - 1);
+        return this.elements.getLast();
     }
 
     @Override
